# portfolio_optimization

./: Cargo.toml  README.md
Current Code/: Backtest.py  DowJones.csv  LoadData.py  OptimizationScript.py  main.py
Python Code Archive/: LoadData.py  MaximizeSharpeRatio.py  Parsed.csv  Testproject.py  VerifyData.py  analyze.py  dma.pickle  historical_data.pkl  output.txy  tickers_to_names.pkl  tickers_to_sectors.pkl
Rust Code Archive/: Cargo.toml  S-and-P-500-list.csv  stocks.py
Rust Code Archive/data/: AAL_5y_Quotes.csv  AAPL_1y_Quotes.csv  AAPL_5y_Quotes.csv  ABBV_1y_Quotes.csv  ABBV_5y_Quotes.csv  ABNB_5y_Quotes.csv  ABT_5y_Quotes.csv  ACGL_1y_Quotes.csv  ACGL_5y_Quotes.csv  ACN_5y_Quotes.csv  ADBE_1y_Quotes.csv  ADBE_5y_Quotes.csv  ADI_5y_Quotes.csv  ADM_5y_Quotes.csv  ADP_5y_Quotes.csv  ADSK_1y_Quotes.csv  ADSK_5y_Quotes.csv  AEE_1y_Quotes.csv  AEE_5y_Quotes.csv  AEP_5y_Quotes.csv  AES_5y_Quotes.csv  AFL_1y_Quotes.csv  AFL_5y_Quotes.csv  AIG_5y_Quotes.csv  AIZ_1y_Quotes.csv  AIZ_5y_Quotes.csv  AJG_5y_Quotes.csv  AKAM_5y_Quotes.csv  ALB_1y_Quotes.csv  ALB_5y_Quotes.csv  ALGN_5y_Quotes.csv  ALK_5y_Quotes.csv  ALLE_1y_Quotes.csv  ALLE_5y_Quotes.csv  ALL_5y_Quotes.csv  AMAT_5y_Quotes.csv  AMCR_5y_Quotes.csv  AMD_5y_Quotes.csv  AME_5y_Quotes.csv  AMGN_1y_Quotes.csv  (+625 more)
Rust Code Archive/src/: calculations.rs  linear_program.rs  main.rs  note.txt  source_data.rs
src/: calculations.rs  linear_program.rs  main.rs  source_data.rs
