[package]
name = "portfolio_optimization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
plotters = "0.3.5"
yahoo_finance_api = "2.1.0"
time = "0.3.30"
tokio-test = "0.4.3"
tokio = { version = "1.34.0", features = ["full"] }
egui = "0.15"
egui_glium = "0.23.0"
csv = "1.3.0"